# eventlogger

./: .gitignore  README.md  main.py  pyproject.toml
eventlogger/: __main__.py  eventlogger.py
eventlogger/ui/: __init__.py  window.py
ui/: window.ui
