[tool.poetry]
name = "eventlogger"
version = "0.1.0"
description = "Tool that allows the assignment of events to definite timestamps"
authors = ["Tim Lucas Sabelmann <tsa@ecap-mobility.com>"]

[tool.poetry.dependencies]
python = ">=3.8 <3.10"
PySide2 = "^5.15.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eventlogger = "eventlogger.eventlogger:main"
